--- a/draggablepanel/res/values/attrs.xml
+++ b/draggablepanel/res/values/attrs.xml
@@ -5,20 +5,20 @@
         <attr name="x_scale_factor" format="float" />
         <attr name="y_scale_factor" format="float" />
         <attr name="top_fragment_margin_right" format="dimension" />
-        <attr name="top_fragment_margin_bottom" format="dimension" />
+        <attr name="top_fragment_margin_bottom" format="dimension"/>
         <attr name="enable_horizontal_alpha_effect" format="boolean" />
     </declare-styleable>
 
     <declare-styleable name="draggable_view">
         <attr name="top_view_id" format="reference" />
         <attr name="bottom_view_id" format="reference" />
-        <attr name="top_view_height" format="dimension" />
-        <attr name="top_view_x_scale_factor" format="float" />
-        <attr name="top_view_y_scale_factor" format="float" />
-        <attr name="top_view_margin_right" format="dimension" />
-        <attr name="top_view_margin_bottom" format="dimension" />
-        <attr name="enable_minimized_horizontal_alpha_effect" format="boolean" />
-        <attr name="top_view_resize" format="boolean" />
+        <attr name="top_view_height" format="dimension" localization="suggested"/>
+        <attr name="top_view_x_scale_factor" format="float" localization="suggested"/>
+        <attr name="top_view_y_scale_factor" format="float" localization="suggested"/>
+        <attr name="top_view_margin_right" format="dimension" localization="suggested"/>
+        <attr name="top_view_margin_bottom" format="dimension" localization="suggested"/>
+        <attr name="enable_minimized_horizontal_alpha_effect" format="boolean" localization="suggested"/>
+        <attr name="top_view_resize" format="boolean" localization="suggested"/>
     </declare-styleable>
 
 </resources>
